--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
 }
 
 .App-logo {
-  height: 40vmin;
   pointer-events: none;
 }
 
@@ -14,18 +13,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #FFD90F;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +30,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.quote-button {
+  font-size: 36px;
+  font-weight: 900;
+  background-color: #FFD90F;
+  color: white;
+  padding: 10px;
+  border-radius: 25px;
+  margin-top: 5px;
 }
